--- a/mobile_application/android/app/src/main/AndroidManifest.xml
+++ b/mobile_application/android/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="mobile_application"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Learn PL"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
