--- a/mobile_application/pubspec.yaml
+++ b/mobile_application/pubspec.yaml
@@ -28,11 +28,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_launcher_icons: ^0.7.4
+  flutter_launcher_name: ^0.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   path_provider: ^1.6.5
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/logo.png"
+flutter_launcher_name:
+  name: "Learn PL"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -50,9 +58,9 @@ flutter:
   assets:
     - images/la.png
     - images/flower.jpg
-    - images/c.png
-    - images/csharp.png
-    - images/java.png
+    - images/
+    - assets/
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
@@ -74,5 +82,15 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: Quando
+      fonts:
+        - asset: fonts/Quando.ttf
+    - family: Satisfy
+      fonts:
+        - asset: fonts/Satisfy.ttf
+    - family: Alike
+      fonts:
+        - asset: fonts/Alike-Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
