--- a/mobile_application/pubspec.yaml
+++ b/mobile_application/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_launcher_icons: ^0.7.4
   flutter_launcher_name: ^0.0.1
+  audioplayers: ^0.15.1
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +60,8 @@ flutter:
     - images/la.png
     - images/
     - assets/
+    - assets/audio/right.mp3
+    - assets/audio/wrong.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
