--- a/mobile_application/pubspec.yaml
+++ b/mobile_application/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   flutter_launcher_icons: ^0.7.4
   flutter_launcher_name: ^0.0.1
   audioplayers: ^0.15.1
+  path_provider_macos: ^0.0.4+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  path_provider: ^1.6.5
+  path_provider: ^1.6.7
 flutter_icons:
   android: "launcher_icon"
   ios: true
